<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTakeCare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/addtakeCare"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/tvReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_18"
            android:paddingTop="@dimen/dimen_10"
            android:text="@string/reportUser"
            android:textColor="@color/color_33333320"
            android:textSize="@dimen/text_16" />
        <TextView
            android:id="@+id/tvDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_18"
            android:paddingTop="@dimen/dimen_10"
            android:text="@string/delete"
            android:textColor="@color/color_33333320"
            android:textSize="@dimen/text_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_5"
            android:background="@color/color_f7f7f7" />

        <TextView
            android:id="@+id/tvCancle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_15"
            android:paddingTop="@dimen/dimen_10"
            android:text="@string/text_cancel"
            android:textColor="@color/color_4A4A4A"
            android:textSize="@dimen/text_16" />

    </LinearLayout>
</FrameLayout>