<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_round6_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_30"
        android:drawablePadding="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:text="@string/dialoge_delcomment_msg"
        android:textColor="@color/color_4a4949"
        android:textSize="@dimen/dimen_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_marginBottom="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_15"
        android:background="@color/color_f9f9f9" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dimen_10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/text_cancel"
            android:textColor="@color/color_e43b3b"
            android:textSize="@dimen/dimen_14" />

        <Button
            android:id="@+id/btnQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_30"
            android:background="@null"
            android:text="@string/query"
            android:textColor="@color/color_e43b3b"
            android:textSize="@dimen/dimen_14" />
    </LinearLayout>


</LinearLayout>