<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/dimen_20"
    android:paddingLeft="@dimen/dimen_15"
    android:paddingRight="@dimen/dimen_15">

    <LinearLayout
        android:id="@+id/viewll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_10"
        android:minHeight="@dimen/dimen_30"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_min_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_round3_eeeeee"
            android:gravity="center_vertical"
            android:hint="@string/minprice"
            android:inputType="number"
            android:paddingBottom="@dimen/dimen_8"
            android:paddingLeft="@dimen/dimen_20"
            android:paddingRight="@dimen/dimen_20"
            android:paddingTop="@dimen/dimen_8"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/dimen_12" />

        <View
            android:layout_width="@dimen/dimen_18"
            android:layout_height="@dimen/dimen_1"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dimen_10"
            android:background="@color/color_f5f5f5" />

        <EditText
            android:id="@+id/et_max_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_round3_eeeeee"
            android:gravity="center_vertical"
            android:hint="@string/maxPrice"
            android:inputType="number"
            android:paddingBottom="@dimen/dimen_8"
            android:paddingLeft="@dimen/dimen_20"
            android:paddingRight="@dimen/dimen_20"
            android:paddingTop="@dimen/dimen_8"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/dimen_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dimen_10"
            android:gravity="center"
            android:text="@string/unit_wan"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_12" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_conner_f72937tofe7bbf"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_8"
            android:paddingLeft="@dimen/dimen_20"
            android:paddingRight="@dimen/dimen_20"
            android:paddingTop="@dimen/dimen_8"
            android:text="@string/query"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_12" />
    </LinearLayout>

    <GridView
        android:id="@+id/recyclView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewll"
        android:layout_marginTop="@dimen/dimen_5"
        android:horizontalSpacing="@dimen/dimen_6"
        android:numColumns="3"
        android:overScrollMode="never"
        android:verticalSpacing="@dimen/dimen_10" />


</RelativeLayout>